completed API from signup to auth token with swagger UI.
