# example-project/internal/user/models.go
@@ -67,6 +67,18 @@ type UserFindRequest struct {
 
 // Token is the payload we deliver to users when they authenticate.
 type Token struct {
-	Token  string      `json:"token"  validate:"required"`
+	// AccessToken is the token that authorizes and authenticates
+	// the requests.
+	AccessToken string `json:"access_token"`
+	// TokenType is the type of token.
+	// The Type method returns either this or "Bearer", the default.
+	TokenType string `json:"token_type,omitempty"`
+	// Expiry is the optional expiration time of the access token.
+	//
+	// If zero, TokenSource implementations will reuse the same
+	// token forever and RefreshToken or equivalent
+	// mechanisms for that TokenSource will not be used.
+	Expiry time.Time `json:"expiry,omitempty"`
+	// contains filtered or unexported fields
 	claims auth.Claims `json:"-"`
 }
